--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>bonjour et bienvenue</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<p>J’ai créé ce site afin de me présenter et vous expliquer mes motivations aux travail de développeur web</a> and released<br />
 							</div>
 						</div>
 						<nav>
