--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>bonjour et bienvenue</h1>
-								<p>J’ai créé ce site afin de me présenter et vous expliquer mes motivations aux travail de développeur web</a> and released<br />
+								<p>J’ai créé ce site afin de me présenter et vous expliquer<br /> mes motivations aux travail de développeur web</a> <br />
 							</div>
 						</div>
 						<nav>
