--- a/index.html
+++ b/index.html
@@ -52,17 +52,20 @@
 
 						<!-- Work -->
 							<article id="work">
-								<h2 class="major">Work</h2>
+								<h2 class="major">Parcours pro et diplômes</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p>J’ai obtenu le brevet de collèges ainsi que le C.A.P installation en télécommunication et électricité. J’ai été militaire pendant 4 années ou j’ai fait de logistique, montage d’antenne, assemblage informatique. Ensuite j’ai été téléconseiller pendant 6 ans et j’ai décidé de faire une VAE ce qui m’a permis d’obtenir un diplôme de niveau IV (bac) reconnu par l’état.</p>
+								
+								<stong>Mes qualitées>
+							<p>je sui quelqu'un de Motiver, adaptation, patient, autonome, contact humain, polyvalent<p>
 							</article>
 
 						<!-- About -->
-							<article id="about">
+							<article id="mes passions">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<p>je suis passionner par<br />les jeux videos>br />la péche<br />les mangas (les lires, les dessiner, regarder les animes,les cosplay)<br />je sui un adepte de youtube (ma plateforme prefere)>br />voici un exemple de ce que je peux dessiner:
+								
 							</article>
 
 						<!-- Contact -->
