--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 							<article id="mes passions">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>je suis passionner par<br />les jeux videos>br />la péche<br />les mangas (les lires, les dessiner, regarder les animes,les cosplay)<br />je sui un adepte de youtube (ma plateforme prefere)>br />voici un exemple de ce que je peux dessiner:
+								<p>je suis passionner par<br />les jeux videos>br />la péche<br />les mangas (les lires, les dessiner, regarder les animes,les cosplay)<br />je sui un adepte de youtube (ma plateforme prefere)>br />voici un exemple de ce que je peux dessiner:<br /><a href="https://user-images.githubusercontent.com/43877138/46679546-855abb80-cbe7-11e8-9afd-cfcf5b4623be.jpg"><https://user-images.githubusercontent.com/43877138/46679625-b2a76980-cbe7-11e8-96a3-3cf1d4fdf14c.jpg"></a><br /> moi en cosplay je suis a gauche:<br />
+<a href=": https://user-images.githubusercontent.com/43877138/46679698-d4085580-cbe7-11e8-8b46-37e3b165e0da.jpg"><img src="https://user-images.githubusercontent.com/43877138/46679759-eedaca00-cbe7-11e8-8b17-7d66de6a061f.jpg"></a><br /> exemple de ma péche<br /><a href=": https://user-images.githubusercontent.com/43877138/46679829-0f0a8900-cbe8-11e8-8254-94c5c8d59b6b.jpg"><img src=": https://user-images.githubusercontent.com/43877138/46679890-2e091b00-cbe8-11e8-8372-806b92a29b42.jpg"></a><br /> exemple de ce que je regarde sur youtube:<br /><iframe width="560" height="315" src="https://www.youtube.com/embed/KGG7asaw3zg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe><br /><iframe width="560" height="315" src="https://www.youtube.com/embed/3ke-sS8dPKk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 								
 							</article>
 
