--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							</article>
 
 						<!-- About -->
-							<article id="About">
+							<article id="mes passions">
 								<h2 class="major">mes passions</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<p>je suis passionner par<br />les jeux videos>br />la péche<br />les mangas (les lires, les dessiner, regarder les animes,les cosplay)<br />je sui un adepte de youtube (ma plateforme prefere)>br />voici un exemple de ce que je peux dessiner:<br /><a href="https://user-images.githubusercontent.com/43877138/46679546-855abb80-cbe7-11e8-9afd-cfcf5b4623be.jpg"><https://user-images.githubusercontent.com/43877138/46679625-b2a76980-cbe7-11e8-96a3-3cf1d4fdf14c.jpg"></a><br /> moi en cosplay je suis a gauche:<br />
