--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Work</a></li>
-								<li><a href="#About">About</a></li>
+								<li><a href="#Motivation">Motivation</a></li>
+								<li><a href="#Parcours">Parcours</a></li>
+								<li><a href="#Mes passions">Mes passions</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -42,17 +42,17 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- Intro -->
-							<article id="intro">
-								<h2 class="major">Intro</h2>
+						<!-- Motivation -->
+							<article id="Motivation">
+								<h2 class="major">Motivation</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p><stron>Pourquoi devnir developpeur web?</strong><br />Ce qui m’a attiré, c’est le fait que c’est un domaine multi-compétences, à la croisée des chemins : il y a une dimension mise en page, conception d’interface, conception d’éléments graphiques, choix graphiques divers, qui nécessite d’acquérir une culture de graphiste, et une dimension technique, logique, recherche de solution, qui elle-même se divise en plusieurs volets : bases de données, développement coté serveur Cette multiplicité des techniques et des compétences rendent le métier particulièrement épanouissant à mes yeux ; le travail était varié et riche en angle de réflexions, et chaque aspect aident à réfléchir à l’autre.<p>
 									
 							</article>
 
-						<!-- Work -->
-							<article id="work">
-								<h2 class="major">Parcours pro et diplômes</h2>
+						<!-- Parcours -->
+							<article id="Parcours">
+								<h2 class="major">Parcourss</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>J’ai obtenu le brevet de collèges ainsi que le C.A.P installation en télécommunication et électricité. J’ai été militaire pendant 4 années ou j’ai fait de logistique, montage d’antenne, assemblage informatique. Ensuite j’ai été téléconseiller pendant 6 ans et j’ai décidé de faire une VAE ce qui m’a permis d’obtenir un diplôme de niveau IV (bac) reconnu par l’état.</p>
 								
@@ -60,9 +60,9 @@
 							<p>je sui quelqu'un de Motiver, adaptation, patient, autonome, contact humain, polyvalent<p>
 							</article>
 
-						<!-- About -->
-							<article id="About">
-								<h2 class="major">About</h2>
+						<!-- Mes passions -->
+							<article id="Mes passions">
+								<h2 class="major">Mes passions</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<p>je suis passionner par<br />les jeux videos<br />la péche<br />les mangas (les lires, les dessiner, regarder les animes,les cosplay)<br />je sui un adepte de youtube (ma plateforme prefere)<br />voici un exemple de ce que je peux dessiner:</p>
 									<a href="https://user-images.githubusercontent.com/43877138/46679546-855abb80-cbe7-11e8-9afd-cfcf5b4623be.jpg">
