--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<ul>
 								<li><a href="#Motivation">Motivation</a></li>
 								<li><a href="#Parcours">Parcours</a></li>
-								<li><a href="#Mes passions">Mes passions</a></li>
+								<li><a href="#passions">passions</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -52,7 +52,7 @@
 
 						<!-- Parcours -->
 							<article id="Parcours">
-								<h2 class="major">Parcourss</h2>
+								<h2 class="major">Parcours</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>J’ai obtenu le brevet de collèges ainsi que le C.A.P installation en télécommunication et électricité. J’ai été militaire pendant 4 années ou j’ai fait de logistique, montage d’antenne, assemblage informatique. Ensuite j’ai été téléconseiller pendant 6 ans et j’ai décidé de faire une VAE ce qui m’a permis d’obtenir un diplôme de niveau IV (bac) reconnu par l’état.</p>
 								
@@ -60,9 +60,9 @@
 							<p>je sui quelqu'un de Motiver, adaptation, patient, autonome, contact humain, polyvalent<p>
 							</article>
 
-						<!-- Mes passions -->
-							<article id="Mes passions">
-								<h2 class="major">Mes passions</h2>
+						<!-- passionss -->
+							<article id="passions">
+								<h2 class="major">passions</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<p>je suis passionner par<br />les jeux videos<br />la péche<br />les mangas (les lires, les dessiner, regarder les animes,les cosplay)<br />je sui un adepte de youtube (ma plateforme prefere)<br />voici un exemple de ce que je peux dessiner:</p>
 									<a href="https://user-images.githubusercontent.com/43877138/46679546-855abb80-cbe7-11e8-9afd-cfcf5b4623be.jpg">
