--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
 								<h2 class="major">Parcours</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>J’ai obtenu le brevet de collèges ainsi que le C.A.P installation en télécommunication et électricité. J’ai été militaire pendant 4 années ou j’ai fait de logistique, montage d’antenne, assemblage informatique. Ensuite j’ai été téléconseiller pendant 6 ans et j’ai décidé de faire une VAE ce qui m’a permis d’obtenir un diplôme de niveau IV (bac) reconnu par l’état.</p>
+								a:hover {
+background-color: blue; 
+color: blue;
+}
 								<p>vous pouvez telecharger <a href="https://github.com/noctis41/arnaud/files/2461332/cv.docx">cv Arnaud Gairaut</a>  afin de juger par vous méme de mon éxperience</p>								<stong>Mes qualitées</strong>
 							<p>je sui quelqu'un de Motiver, adaptation, patient, autonome, contact humain, polyvalent<p>
 							</article>
