--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 											<input type="text" name="name" id="name" />
 										</div>
 										<div class="field half">
-											<label for="email">Email</label>
+											<label for="gairaut.arnaud@laposte.net">gairaut.arnaud@laposte.net</label>
 											<input type="text" name="email" id="email" />
 										</div>
 										<div class="field">
