--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
+								<form action="gairaut.arnaud@laposte.net" method="post" name="contact">
 								<form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
@@ -98,7 +99,7 @@
 											<input type="text" name="name" id="name" />
 										</div>
 										<div class="field half">
-											<label for="gairaut.arnaud@laposte.net">gairaut.arnaud@laposte.net</label>
+											<label for="email">email</label>
 											<input type="text" name="email" id="email" />
 										</div>
 										<div class="field">
