--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 							<article id="contact">
 								<h2 class="major">Contact</h2>
 								<form action="gairaut.arnaud@laposte.net" method="post" name="contact">
-								<form method="post" action="#">
+								<form method="post" action="gairaut.arnaud@laposte.net">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
