--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 							<article id="contact">
 								<h2 class="major">Contact</h2>
 								
-								<form method=post enctype="text/plain" action="gairaut.arnaud@laposte.net">
+								<form method=post enctype="text/plain" action="formulaire.php">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
