--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 							<article id="contact">
 								<h2 class="major">Contact</h2>
 								
-								<form>
+								<form><form action="formulaire.php" method="post">
 	
 								</form>
 	
