--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>bonjour et bienvenue</h1>
-								<p>J’ai créé ce site afin de me présenter et vous expliquer<br /> mes motivations aux travail de développeur web</a> <br />
+								<p>J’ai créé ce site afin de me présenter et vous expliquer<br /> mes motivations au travail de développeur web</a> <br />
 							</div>
 						</div>
 						<nav>
@@ -46,7 +46,7 @@
 							<article id="Motivation">
 								<h2 class="major">Motivation</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p><stron>Pourquoi devnir developpeur web?</strong><br />Ce qui m’a attiré, c’est le fait que c’est un domaine multi-compétences, à la croisée des chemins : il y a une dimension mise en page, conception d’interface, conception d’éléments graphiques, choix graphiques divers, qui nécessite d’acquérir une culture de graphiste, et une dimension technique, logique, recherche de solution, qui elle-même se divise en plusieurs volets : bases de données, développement coté serveur Cette multiplicité des techniques et des compétences rendent le métier particulièrement épanouissant à mes yeux ; le travail était varié et riche en angle de réflexions, et chaque aspect aident à réfléchir à l’autre.<p>
+								<p><stron>Pourquoi devenir developpeur web?</strong><br />le domaine multi-compétences, à la croisée des chemins m'a beaucoup attiré : il y a une dimension mise en page, conception d’interface, conception d’éléments graphiques, choix graphiques divers, qui nécessite d’acquérir une culture de graphiste, et une dimension technique, logique, recherche de solution, qui elle-même se divise en plusieurs volets : bases de données, développement coté serveur Cette multiplicité des techniques et des compétences rendent le métier particulièrement épanouissant à mes yeux ; le travail était varié et riche en angle de réflexions, et chaque aspect aident à réfléchir à l’autre.<p>
 									
 							</article>
 
@@ -54,18 +54,18 @@
 							<article id="Parcours">
 								<h2 class="major">Parcours</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>J’ai obtenu le brevet de collèges ainsi que le C.A.P installation en télécommunication et électricité. J’ai été militaire pendant 4 années ou j’ai fait de logistique, montage d’antenne, assemblage informatique. Ensuite j’ai été téléconseiller pendant 6 ans et j’ai décidé de faire une VAE ce qui m’a permis d’obtenir un diplôme de niveau IV (bac) reconnu par l’état.</p>
+								<p>J’ai obtenu le brevet de collèges ainsi que le C.A.P installation en télécommunication et électricité. J’ai été militaire pendant 4 années ou j’ai fait de logistique, montage d’antenne, assemblage informatique. puis téléconseiller pendant 6 ans, j'ai décidé de faire une VAE et ce qui m’a permis d’obtenir un diplôme de niveau IV (bac) reconnu par l’état.</p>
 								
 
-								<p>vous pouvez telecharger <a href="https://github.com/noctis41/arnaud/files/2461332/cv.docx">mon cv</a>  afin de juger par vous méme de mon éxperience</p>								<stong>Mes qualitées</strong>
-							<p>je sui quelqu'un de Motiver, adaptation, patient, autonome, contact humain, polyvalent<p>
+								<p>vous pouvez telecharger <a href="https://github.com/noctis41/arnaud/files/2461332/cv.docx">mon cv</a>  afin de juger par vous méme de mon éxperience</p>								<stong>Mes qualités</strong>
+							<p>je suis quelqu'un de Motivé, possédant des qualités d'adaptation,, patient, autonome, ayant le goût du relationnel, polyvalent<p>
 							</article>
 
 						<!-- passionss -->
 							<article id="passions">
 								<h2 class="major">passions</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>je suis passionner par<br />les jeux videos<br />la péche<br />les mangas (les lires, les dessiner, regarder les animes,les cosplay)<br />je sui un adepte de youtube (ma plateforme prefere)<br />voici un exemple de ce que je peux dessiner:</p>
+								<p>je suis passionné par<br />les jeux videos<br />la péche<br />les mangas (les lires, les dessiner, regarder les animes,les cosplay)<br />je sui un adepte de youtube (ma plateforme prefere)<br />voici un exemple de ce que je peux dessiner:</p>
 									<a href="https://user-images.githubusercontent.com/43877138/46679546-855abb80-cbe7-11e8-9afd-cfcf5b4623be.jpg">
 										<img src="https://user-images.githubusercontent.com/43877138/46679625-b2a76980-cbe7-11e8-96a3-3cf1d4fdf14c.jpg">
 										</a>
