--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<article id="Motivation">
 								<h2 class="major">Motivation</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p><stron>Pourquoi devenir developpeur web?</strong><br />le domaine multi-compétences, à la croisée des chemins m'a beaucoup attiré : il y a une dimension mise en page, conception d’interface, conception d’éléments graphiques, choix graphiques divers, qui nécessite d’acquérir une culture de graphiste, et une dimension technique, logique, recherche de solution, qui elle-même se divise en plusieurs volets : bases de données, développement coté serveur Cette multiplicité des techniques et des compétences rendent le métier particulièrement épanouissant à mes yeux ; le travail était varié et riche en angle de réflexions, et chaque aspect aident à réfléchir à l’autre.<p>
+								<p><stron>Pourquoi devenir developpeur web?</strong><br />le domaine multi-compétences, à la croisée des chemins m'a beaucoup attiré : il y a une dimension mise en page, conception d’interface, conception d’éléments graphiques, choix graphiques divers, qui nécessite d’acquérir une culture de graphiste, et une dimension technique, logique, recherche de solution, qui elle-même se divise en plusieurs volets : bases de données, développement coté serveur. Cette multiplicité des techniques et des compétences rendent le métier particulièrement épanouissant à mes yeux ; le travail était varié et riche en angle de réflexions, et chaque aspect aident à réfléchir à l’autre.<p>
 									
 							</article>
 
@@ -65,7 +65,7 @@
 							<article id="passions">
 								<h2 class="major">passions</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>je suis passionné par<br />les jeux videos<br />la péche<br />les mangas (les lires, les dessiner, regarder les animes,les cosplay)<br />je sui un adepte de youtube (ma plateforme prefere)<br />voici un exemple de ce que je peux dessiner:</p>
+								<p>je suis passionné par<br />les jeux videos<br />la péche<br />les mangas (les lires, les dessiner, regarder les animes,les cosplay)<br />je suis un adepte de youtube (ma plateforme prefere)<br />voici un exemple de ce que je peux dessiner:</p>
 									<a href="https://user-images.githubusercontent.com/43877138/46679546-855abb80-cbe7-11e8-9afd-cfcf5b4623be.jpg">
 										<img src="https://user-images.githubusercontent.com/43877138/46679625-b2a76980-cbe7-11e8-96a3-3cf1d4fdf14c.jpg">
 										</a>
