--- a/index.html
+++ b/index.html
@@ -54,18 +54,18 @@
 							<article id="Parcours">
 								<h2 class="major">Parcours</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>J’ai obtenu le brevet de collèges ainsi que le C.A.P installation en télécommunication et électricité. J’ai été militaire pendant 4 années ou j’ai fait de logistique, montage d’antenne, assemblage informatique. puis téléconseiller pendant 6 ans, j'ai décidé de faire une VAE et ce qui m’a permis d’obtenir un diplôme de niveau IV (bac) reconnu par l’état.</p>
+								<p>J’ai obtenu le brevet du collège ainsi que le CAP Installation en Télécommunication et Electricité. J’ai été militaire pendant 4 années où j’ai fait de la logistique, montage d’antenne, assemblage informatique puis téléconseillé pendant 6 ans. J'ai décidé de faire une VAE et c'est ce qui m’a permis d’obtenir un diplôme de niveau IV (bac) reconnu par l’état.</p>
 								
 
-								<p>vous pouvez telecharger <a href="https://github.com/noctis41/arnaud/files/2473106/cv.docx">mon cv</a>  afin de juger par vous méme de mon éxperience</p>								<stong>Mes qualités</strong>
-							<p>je suis quelqu'un de Motivé, possédant des qualités d'adaptation,, patient, autonome, ayant le goût du relationnel, polyvalent<p>
+								<p>Vous pouvez télécharger <a href="https://github.com/noctis41/arnaud/files/2473106/cv.docx">mon cv</a>  afin de juger par vous même de mon expérience</p>								<stong>Mes qualités</strong>
+							<p>je suis quelqu'un de motivé possédant des qualités d'adaptation, patient, autonome, ayant le goût du relationnel, polyvalent<p>
 							</article>
 
 						<!-- passionss -->
 							<article id="passions">
 								<h2 class="major">passions</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>je suis passionné par<br />les jeux videos<br />la péche<br />les mangas (les lires, les dessiner, regarder les animes,les cosplay)<br />je suis un adepte de youtube (ma plateforme prefere)<br />voici un exemple de ce que je peux dessiner:</p>
+								<p>Je suis passionné par<br />les jeux videos<br />la pêche<br />les mangas (les lires, les dessiner, regarder les animés, les cosplay)<br />je suis un adepte de youtube (ma plateforme préféré)<br />voici un exemple de ce que je peux dessiner:</p>
 									<a href="https://user-images.githubusercontent.com/43877138/46679546-855abb80-cbe7-11e8-9afd-cfcf5b4623be.jpg">
 										<img src="https://user-images.githubusercontent.com/43877138/46679625-b2a76980-cbe7-11e8-96a3-3cf1d4fdf14c.jpg">
 										</a>
@@ -73,7 +73,7 @@
 									<a href=": https://user-images.githubusercontent.com/43877138/46679698-d4085580-cbe7-11e8-8b46-37e3b165e0da.jpg">
 										<img src="https://user-images.githubusercontent.com/43877138/46679759-eedaca00-cbe7-11e8-8b17-7d66de6a061f.jpg">
 										</a>
-									<P>exemple de ma péche:</P>
+									<P>exemple de ma pêche:</P>
 									<a href="https://user-images.githubusercontent.com/43877138/46679829-0f0a8900-cbe8-11e8-8254-94c5c8d59b6b.jpg">
 										<img src="https://user-images.githubusercontent.com/43877138/46679890-2e091b00-cbe8-11e8-8372-806b92a29b42.jpg">
 										</a><br />
