--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<!-- Motivation -->
 							<article id="Motivation">
 								<h2 class="major">Motivation</h2>
-								<span class="image main"><img https://user-images.githubusercontent.com/43877138/46884151-6a40b380-ce54-11e8-8843-760ddba93566.png" alt="" /></span>
+								<span class="image main"><img src="https://user-images.githubusercontent.com/43877138/46884151-6a40b380-ce54-11e8-8843-760ddba93566.png" alt="" /></span>
 								<p><stron>Pourquoi devenir developpeur web?</strong><br />le domaine multi-compétences, à la croisée des chemins m'a beaucoup attiré : il y a une dimension mise en page, conception d’interface, conception d’éléments graphiques, choix graphiques divers, qui nécessite d’acquérir une culture de graphiste, et une dimension technique, logique, recherche de solution, qui elle-même se divise en plusieurs volets : bases de données, développement coté serveur. Cette multiplicité des techniques et des compétences rendent le métier particulièrement épanouissant à mes yeux ; le travail était varié et riche en angle de réflexions, et chaque aspect aident à réfléchir à l’autre.<p>
 									
 							</article>
@@ -53,7 +53,7 @@
 						<!-- Parcours -->
 							<article id="Parcours">
 								<h2 class="major">Parcours</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								<span class="image main"><img src="images/pic02.jpg" alt=""/></span>
 								<p>J’ai obtenu le brevet du collège ainsi que le CAP Installation en Télécommunication et Electricité. J’ai été militaire pendant 4 années où j’ai fait de la logistique, montage d’antenne, assemblage informatique puis téléconseillé pendant 6 ans. J'ai décidé de faire une VAE et c'est ce qui m’a permis d’obtenir un diplôme de niveau IV (bac) reconnu par l’état.</p>
 								
 
