--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						<!-- Parcours -->
 							<article id="Parcours">
 								<h2 class="major">Parcours</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt=""/></span>
+								<span class="image main"><img src="https://user-images.githubusercontent.com/43877138/46884765-44b4a980-ce56-11e8-8cd1-1c7145ba5827.jpgg" alt=""/></span>
 								<p>J’ai obtenu le brevet du collège ainsi que le CAP Installation en Télécommunication et Electricité. J’ai été militaire pendant 4 années où j’ai fait de la logistique, montage d’antenne, assemblage informatique puis téléconseillé pendant 6 ans. J'ai décidé de faire une VAE et c'est ce qui m’a permis d’obtenir un diplôme de niveau IV (bac) reconnu par l’état.</p>
 								
 
