--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 						<!-- passionss -->
 							<article id="passions">
 								<h2 class="major">passions</h2>
-								<span class="image main"><img src="(https://user-images.githubusercontent.com/43877138/46885835-6fecc800-ce59-11e8-9652-b72297b014ae.jpg" alt="" /></span>
+								<span class="image main"><img src="https://user-images.githubusercontent.com/43877138/46885835-6fecc800-ce59-11e8-9652-b72297b014ae.jpg" alt="" /></span>
 								<p>Je suis passionné par<br />les jeux videos<br />la pêche<br />les mangas (les lires, les dessiner, regarder les animés, les cosplay)<br />je suis un adepte de youtube (ma plateforme préféré)<br />voici un exemple de ce que je peux dessiner:</p>
 									<a href="https://user-images.githubusercontent.com/43877138/46679546-855abb80-cbe7-11e8-9afd-cfcf5b4623be.jpg">
 										<img src="https://user-images.githubusercontent.com/43877138/46679625-b2a76980-cbe7-11e8-96a3-3cf1d4fdf14c.jpg">
