--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>bonjour et bienvenue</h1>
-								<p>J’ai créé ce site afin de me présenter et vous expliquer<br /> mes motivations au travail de développeur web</a> <br />
+								<p>J’ai créé ce site afin de me présenter et vous expliquez<br /> mes motivations au travail de développeur web</a> <br />
 							</div>
 						</div>
 						<nav>
@@ -46,7 +46,7 @@
 							<article id="Motivation">
 								<h2 class="major">Motivation</h2>
 								<span class="image main"><img src="https://user-images.githubusercontent.com/43877138/46884151-6a40b380-ce54-11e8-8843-760ddba93566.png" alt=""/></span>
-								<p><stron>Pourquoi devenir developpeur web?</strong><br />le domaine multi-compétences, à la croisée des chemins m'a beaucoup attiré : il y a une dimension mise en page, conception d’interface, conception d’éléments graphiques, choix graphiques divers, qui nécessite d’acquérir une culture de graphiste, et une dimension technique, logique, recherche de solution, qui elle-même se divise en plusieurs volets : bases de données, développement coté serveur. Cette multiplicité des techniques et des compétences rendent le métier particulièrement épanouissant à mes yeux ; le travail était varié et riche en angle de réflexions, et chaque aspect aident à réfléchir à l’autre.<p>
+								<p><stron>Pourquoi devenir developpeur web?</strong><br />le domaine multi-compétences, à la croisée des chemins m'a beaucoup attiré : il y a une dimension mise en page, conception d’interface, conception d’éléments graphiques, choix graphiques divers, qui nécessite d’acquérir une culture de graphiste, et une dimension technique, logique, recherche de solutions, qui elles-même se divisent en plusieurs volets : bases de données, développement coté serveur. Cette multiplicité des techniques et des compétences rendent le métier particulièrement épanouissant à mes yeux ; le travail étant varié et riche en angles de réflexions, et chaques aspects aident à réfléchir à l’autre.<p>
 									
 							</article>
 
@@ -69,7 +69,7 @@
 									<a href="https://user-images.githubusercontent.com/43877138/46679546-855abb80-cbe7-11e8-9afd-cfcf5b4623be.jpg">
 										<img src="https://user-images.githubusercontent.com/43877138/46679625-b2a76980-cbe7-11e8-96a3-3cf1d4fdf14c.jpg">
 										</a>
-									<p>moi en cosplay je suis a gauche:</P>
+									<p>moi en cosplay je suis à gauche:</P>
 									<a href=": https://user-images.githubusercontent.com/43877138/46679698-d4085580-cbe7-11e8-8b46-37e3b165e0da.jpg">
 										<img src="https://user-images.githubusercontent.com/43877138/46679759-eedaca00-cbe7-11e8-8b17-7d66de6a061f.jpg">
 										</a>
